4.1.4
 * Fixed the inconsistency between distributedKeyspaces and distributedAndLocalKeyspaces (CASSANDRA-18747)
 * Internode legacy SSL storage port certificate is not hot reloaded on update (CASSANDRA-18681)
 * Nodetool paxos-only repair is no longer incremental (CASSANDRA-18466)
 * Waiting indefinitely on ReceivedMessage response in StreamSession#receive() can cause deadlock (CASSANDRA-18733)
 * Allow empty keystore_password in encryption_options (CASSANDRA-18778)
 * Skip ColumnFamilyStore#topPartitions initialization when client or tool mode (CASSANDRA-18697)
Merged from 4.0:
 * Support max SSTable size in sorted CQLSSTableWriter (CASSANDRA-18941)
 * Fix nodetool repair_admin summarize-pending command to not throw exception (CASSANDRA-19014)
 * Fix cassandra-stress in simplenative mode with prepared statements (CASSANDRA-18744)
 * Fix filtering system ks sstables for relocation on startup (CASSANDRA-18963)
 * Remove completed coordinator sessions (CASSANDRA-18903)
 * Make StartupConnectivityChecker only run a connectivity check if there are no nodes which are running a version prior to Cassandra 4 (CASSANDRA-18968)
 * Retrieve keyspaces metadata and schema version concistently in DescribeStatement (CASSANDRA-18921)
 * Gossip NPE due to shutdown event corrupting empty statuses (CASSANDRA-18913)
 * Fix closing iterator in SecondaryIndexBuilder (CASSANDRA-18361)
 * Update hdrhistogram to 2.1.12 (CASSANDRA-18893)
 * Improve performance of compactions when table does not have an index (CASSANDRA-18773)
 * JMH improvements - faster build and async profiler (CASSANDRA-18871)
 * Enable 3rd party JDK installations for Debian package (CASSANDRA-18844)
 * Fix NTS log message when an unrecognized strategy option is passed (CASSANDRA-18679)
 * Fix BulkLoader ignoring cipher suites options (CASSANDRA-18582)
 * Migrate Python optparse to argparse (CASSANDRA-17914)
Merged from 3.11:
 * Fix delayed SSTable release with unsafe_aggressive_sstable_expiration (CASSANDRA-18756)